k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macedonia-explorer-backend
  namespace: macedonia-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: macedonia-explorer-backend
  template:
    metadata:
      labels:
        app: macedonia-explorer-backend
    spec:
      containers:
        - name: backend
          image: evab221153/macedonia-explorer-backend:latest
          ports:
            - containerPort: 8080
