k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: macedonia-explorer-db
  namespace: macedonia-explorer
spec:
  serviceName: macedonia-explorer-db
  replicas: 1
  selector:
    matchLabels:
      app: macedonia-explorer-db
  template:
    metadata:
      labels:
        app: macedonia-explorer-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
