k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: macedonia-explorer-db
  namespace: macedonia-explorer
spec:
  selector:
    app: macedonia-explorer-db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
